--- a/css/layout.css
+++ b/css/layout.css
@@ -18,8 +18,24 @@
 
     html{
         background-color: whitesmoke;
+        margin-left: 50px;
+        margin-right: 50px;
     }
-
+    body{
+        background-color: green;
+    }
+    nav{
+        font-size: 200%;
+        text-align: center;
+    }
+    a{
+        padding: 5%;
+    }
+    a img{
+        width: 25%;
+        height: 200px;  
+        
+    }
     .grid-container{
         display: grid;
         grid-template-columns: 1fr, 1fr, 1fr, 1fr;
@@ -59,4 +75,8 @@
         grid-row-start: 2;
         grid-row-end: 3;
     }
+    footer{
+        background-color: whitesmoke;
+    }
+
 }
