--- a/css/layout.css
+++ b/css/layout.css
@@ -18,11 +18,30 @@
 
     html{
         background-color: whitesmoke;
-        margin-left: 50px;
-        margin-right: 50px;
+        margin-left: 75px;
+        margin-right: 75px;
     }
     body{
-        background-color: green;
+        background-color: #096192;
+    }
+    header{
+        text-align: center;
+        text-decoration: underline;
+        color: black;
+        font-size: 200%;
+        text-decoration-color: black;
+        text-shadow: 1px 1px 5px white;
+    }
+    .logo{
+        position: fixed;
+        float: left;
+        width: 110px;
+        height: 110px;
+        top:0px;
+        left: 0px;
+    }
+    .logo > html{
+        margin-right: 100px;
     }
     nav{
         font-size: 200%;
@@ -40,12 +59,13 @@
         display: grid;
         grid-template-columns: 1fr, 1fr, 1fr, 1fr;
         grid-template-rows: 33%, 33%, 33%;
-        background-color: blue;
+        background-color: #096192;
         grid-gap: 10px;
+        font-size: 125%;
     }
     .main{
         border: black 4px solid;
-        background-color: red;
+        background-color: #24AAE2;
         grid-column-start: 1;
         grid-column-end: 3;
         grid-row-start: 1;
@@ -53,23 +73,31 @@
     }
     .aside{
         border: black 4px solid;
-        background-color: firebrick;
+        background-color: #0E8C7F;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 1;
         grid-row-end: 3;
     }
+    .aside img{
+        width: 300px;
+        height: 300px;
+    }
     .item-1{
         border: black 4px solid;
-        background-color: purple;
+        background-color: #1399C6;
         grid-column-start: 1;
         grid-column-end: 2;
         grid-row-start: 2;
         grid-row-end: 3;
     }
+    .item-1 h1{
+        text-decoration: underline;
+        text-align: center;
+    }
     .item-2{
         border: black 4px solid;
-        background-color: yellow;
+        background-color: #1399C6;
         grid-column-start: 2;
         grid-column-end: 3;
         grid-row-start: 2;
