--- a/css/layout.css
+++ b/css/layout.css
@@ -57,8 +57,8 @@
     }
     .grid-container{
         display: grid;
-        grid-template-columns: 1fr, 1fr, 1fr, 1fr;
-        grid-template-rows: 33%, 33%, 33%;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 33% 33% 33%;
         background-color: #096192;
         grid-gap: 10px;
         font-size: 125%;
@@ -77,7 +77,7 @@
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 1;
-        grid-row-end: 3;
+        grid-row-end: 4;
     }
     .aside img{
         width: 300px;
@@ -89,7 +89,7 @@
         grid-column-start: 1;
         grid-column-end: 2;
         grid-row-start: 2;
-        grid-row-end: 3;
+        grid-row-end: 4;
     }
     .item-1 h1{
         text-decoration: underline;
@@ -98,10 +98,9 @@
     .item-2{
         border: black 4px solid;
         background-color: #1399C6;
-        grid-column-start: 2;
-        grid-column-end: 3;
+        grid-column: 2 / 3;
         grid-row-start: 2;
-        grid-row-end: 3;
+        grid-row-end: 4;
     }
     footer{
         background-color: whitesmoke;
