--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,11 +1,32 @@
 html{
-    background: linear-gradient(90deg,yellow, orange, orangered, red, pink,
-     rebeccapurple, purple, blue, turquoise, lime, yellowgreen,yellow);
-     width: 5000px;
+    overflow-x: hidden;
+}
+body{
+    height: 100vh;
+    background-image: url(https://image.shutterstock.com/image-vector/vector-cartoon-style-underwater-background-260nw-1101950561.jpg);
+    background-size: cover;
+}
+body:hover{
+    transform: translateX(100px);
     transition: 5s;
+    background-position-x: 1000px;
+    transition: 20s;
+}
+.coding{
+    border: 4px solid black;
+    width: 200px;
+    height: 215px;
+    margin-top: 90px;
+    margin-left: 100px;
+}
+.coding h1{
+    text-shadow: 1px 1px 0px red;
 }
 
-html:hover{
-    transition: 10s;
-    transform: translate(975px, 0px);
+.arizona{
+    border: 4px solid black;
+    width: 200px;
+    height: 215px;
+    margin-top: 90px;
+    margin-left: 800px;
 }
