--- a/css/layout.css
+++ b/css/layout.css
@@ -17,12 +17,12 @@
 @media only screen and (min-width: 992px) {
 
     html{
-        background-color: whitesmoke;
+        background-color: rgb(190, 242, 255);
         margin-left: 75px;
         margin-right: 75px;
     }
     body{
-        background-color: #096192;
+        background: linear-gradient(#096192,rgb(190, 242, 255) );
     }
     header{
         text-align: center;
@@ -32,13 +32,30 @@
         text-decoration-color: black;
         text-shadow: 1px 1px 5px white;
     }
+    h1{
+        text-decoration: underline;
+    }
+    h2{
+        text-decoration: underline;
+        text-align: center;
+    }
     .logo{
-        position: fixed;
-        float: left;
+        position: relative;
         width: 110px;
         height: 110px;
         top:0px;
         left: 0px;
+        animation-name: logo;
+        animation-duration: 10s;
+        animation-iteration-count:infinite;
+    }
+    @-webkit-keyframes logo{
+        0%   {left: 0px;}
+        100% {left: 1245px;}
+    }
+    @keyframes logo{
+        0%   {left: 0px;}
+        100% {left: 1245px;}
     }
     .logo > html{
         margin-right: 100px;
@@ -101,7 +118,17 @@
         grid-row-end: 4;
     }
     footer{
-        background-color: whitesmoke;
+        background-color: rgb(190, 242, 255) ;
+    }
+    footer p{
+        text-align: center;
+        font-size: 150%;
+    }
+
+    /* Animation code */
+
+    .ocean{
+        width: 100%;
     }
 
 }
