--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,16 @@
+@font-face{
+     font-family: 'Bold';
+     src: url(../fonts/Bold.ttf);
+}
+@font-face{
+    font-family: 'Light';
+    src: url(../fonts/Rubik-Light.ttf);
+}
+@font-face{
+    font-family: 'Normal';
+    src: url(../fonts/Rubik-Regular.ttf);
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 767px) {
     html{
@@ -15,7 +28,7 @@
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-
+    
     html{
         background-color: rgb(190, 242, 255);
         margin-left: 75px;
@@ -23,7 +36,9 @@
     }
     body{
         background: linear-gradient(#096192,rgb(190, 242, 255) );
+        font-family: 'Light';
     }
+    
     header{
         text-align: center;
         text-decoration: underline;
@@ -31,9 +46,11 @@
         font-size: 200%;
         text-decoration-color: black;
         text-shadow: 1px 1px 5px white;
+        font-family: 'Bold';
     }
     h1{
         text-decoration: underline;
+        font-family: 'Bold';
     }
     h2{
         text-decoration: underline;
@@ -89,7 +106,7 @@
     }
     .aside{
         border: black 4px solid;
-        background-color: #0E8C7F;
+        background-color: rgb(34, 154, 206);
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 1;
