--- a/css/gallery.css
+++ b/css/gallery.css
@@ -12,6 +12,16 @@ body:hover{
     background-position-x: 1000px;
     transition: 20s;
 }
+.home{
+    top: -100px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+.home a img{
+    height: 125px;
+    width:125px;
+}
 .coding{
     background-image: url(https://d3i6fh83elv35t.cloudfront.net/newshour/app/uploads/2015/03/coding-1024x836.jpg);
     border: 4px solid black;
@@ -41,7 +51,7 @@ body:hover{
     width: 200px;
     height: 215px;
     margin-top: 190px;
-    margin-left: 1300px;
+    margin-left: 1000px;
     color: white;
 }
 .arizona img{
