--- a/css/gallery.css
+++ b/css/gallery.css
@@ -12,22 +12,12 @@ body:hover{
     background-position-x: 1000px;
     transition: 20s;
 }
-.home{
-    top: -100px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-.home a img{
-    height: 125px;
-    width:125px;
-}
 .coding{
     background-image: url(https://d3i6fh83elv35t.cloudfront.net/newshour/app/uploads/2015/03/coding-1024x836.jpg);
     border: 4px solid black;
     width: 200px;
     height: 215px;
-    margin-top: 90px;
+    margin-top: 50px;
     margin-left: 100px;
     font-family: 'Bold';
     color: white;
@@ -44,17 +34,32 @@ body:hover{
     font-size: 200%;
     text-shadow: 5px 5px 0px red;
     font-family: 'Bold';
+    text-align: center;
 }
 .arizona{
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/9/9d/Flag_of_Arizona.svg);
     border: 4px solid black;
     width: 200px;
     height: 215px;
-    margin-top: 190px;
+    margin-top: 50px;
     margin-left: 1000px;
     color: white;
 }
 .arizona img{
     width: 200px;
     height: 215px;
+}
+.arizona h1{
+    text-align: center;
+}
+.home{
+    top: -100px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+.home a img{
+    height: 255px;
+    width:275px;
+    margin-top: 46px;
 }
