--- a/css/layout.css
+++ b/css/layout.css
@@ -21,9 +21,141 @@
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
     html{
-        background-color: yellow;
+        background-color: skyblue;
+        margin-left: 75px;
+        margin-right: 75px;
+    }
+    body{
+        background: linear-gradient(#096192,rgb(190, 242, 255) );
+        font-family: 'Light';
+        margin: 0;
+    }
+    header {
+        position: relative;
+        text-transform: uppercase;
+        font-size: 200%;
+        letter-spacing: 4px;
+        background: linear-gradient(90deg, #000, #fff, #000);
+        background-repeat: no-repeat;
+        background-size: 80%;
+        animation: animate 5s linear infinite;
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: rgba(255, 255, 255, 0);
+        text-align: center;
+      }    
+      @keyframes animate {
+        0%   { background-position: -500%;}
+        100% { background-position: 500%;}
+      }
+    h1{
+        text-decoration: underline;
+        font-family: 'Bold';
+    }
+    h2{
+        text-decoration: underline;
+        text-align: center;
+    }
+    .logo{
+        position: relative;
+        width: 110px;
+        height: 110px;
+        top:0px;
+        left: 0px;
+        animation-name: logo;
+        animation-duration: 5s;
+        animation-iteration-count:infinite;
+        animation-timing-function: linear;
+        
+    }
+    @-webkit-keyframes logo{
+        0%   {left: 0px;}
+        100% {left: 82%;}
+    }
+    @keyframes logo{
+        0%   {left: 0px;}
+        100% {left: 82%;}
+    }
+    .logo > html{
+        margin-right: 100px;
+    }
+    nav{
+        font-size: 200%;
+        text-align: center;
+       
+    }
+    a img{
+        width: 15%;
+        height: 120px;  
+        
+    }
+    .grid-container{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 33% 33% 33%;
+        background-color: #096192;
+        grid-gap: 10px;
+        
+    }
+    p, h1{
+        padding-left: 8px;
+    }
+    .main{
+        border: black 4px solid;
+        background-color: #24AAE2;
+        height: 92%;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+    .aside{
+        border: black 4px solid;
+        background-color: rgb(34, 154, 206);
+        grid-column-start: 3;
+        grid-column-end: 4;
+        grid-row-start: 1;
+        grid-row-end: 4;
+    }
+    .aside h1{
+        text-align: center;
+    }
+    .aside img{
+        width: 100px;
+        height: 100px;
+    }
+    .item-1{
+        border: black 4px solid;
+        background-color: #1399C6;
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        grid-row-end: 4;
+    }
+    .item-1 h1{
+        text-decoration: underline;
+        text-align: center;
+    }
+    .item-2{
+        border: black 4px solid;
+        background-color: #1399C6;
+        grid-column: 2 / 3;
+        grid-row-start: 2;
+        grid-row-end: 4;
+    }
+    .item-2 h1{
+        text-decoration: underline;
+        text-align: center;
+    }
+    .item-2 img{
+        height: 100px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100px;
     }
 }
+
 
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -95,10 +227,15 @@
         background-color: #096192;
         grid-gap: 10px;
         font-size: 125%;
+        
+    }
+    p, h1{
+        padding-left: 8px;
     }
     .main{
         border: black 4px solid;
         background-color: #24AAE2;
+        height: 92%;
         grid-column-start: 1;
         grid-column-end: 3;
         grid-row-start: 1;
@@ -138,6 +275,17 @@
         grid-row-start: 2;
         grid-row-end: 4;
     }
+    .item-2 h1{
+        text-decoration: underline;
+        text-align: center;
+    }
+    .item-2 img{
+        height: 100%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
 
     /* Animation code */
 
@@ -150,7 +298,16 @@
         bottom:0;
         left:0;
         background:rgb(1, 88, 113);
-        top: 1105px;
+        top: 1205px;
+      }
+      .ocean-2{ 
+        height: 5%;
+        width:100%;
+        position:absolute;
+        bottom:0;
+        left:0;
+        background:rgb(1, 88, 113);
+        top: 1575px;
       }
     .wave{
         background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/85486/wave.svg);
