--- a/css/gallery.css
+++ b/css/gallery.css
@@ -73,7 +73,7 @@ body:hover{
 .home a img{
     height: 382.5px;
     width:412.5px;
-    margin-top: -200spx;
+    margin-top: -200px;
     transform: translateY(236px);
 
 }
