--- a/css/layout.css
+++ b/css/layout.css
@@ -14,7 +14,7 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 767px) {
     html{
-    background-color: blue;
+    background: linear-gradient(45deg, cornflowerblue, royalblue, cornflowerblue, royalblue);
     color: white;
     }
     body{
@@ -27,12 +27,16 @@
     }
     .combine{
         display: flex;
-        background-color: black;
+        position: fixed;
         width: 100%;
         margin-top: 20px;
     }
     header{
         display: flex;
+        color: black;
+        font-family: 'Bold';
+        font-size: 80%;
+        text-shadow: 1px 1px 5px white;
         width: 50%;
         left: -200px
     }
@@ -55,9 +59,54 @@
     }
     .grid-container{
         display: grid;
+        margin-top: 100px;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 50%, 50%;
-        grid-gap: 10px;
+        grid-gap: 12px;
+        font-family: 'Light';
+    }
+    h1{
+        text-align: center;
+        text-decoration: underline;
+        font-family: 'Bold';
+    }
+    .main{
+        width: 100%;
+        border: 4px solid black;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+    .aside{
+        width: 100%;
+        border: 4px solid black;
+        grid-row-start: 3;
+        grid-row-end: 4;
+    }
+    .aside img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 150px;
+        height: 150px;
+    }
+    .item-1{
+        width: 100%;
+        border: 4px solid black;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+    .item-2{
+        width: 100%;
+        border: 4px solid black;
+        grid-row-start: 1;
+        grid-row-end: 4;
+    }
+    .item-2 img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 200px;
+        height: 200px;
     }
 }
 
