--- a/css/layout.css
+++ b/css/layout.css
@@ -76,6 +76,9 @@
         width: 1px;
         height: 1px;
     }
+    img{
+        opacity: 0.5;
+    }
     header { 
         position: relative; 
         text-align: center;
@@ -118,8 +121,8 @@
         opacity: 1;
     }
     .main{
-        border: black 4px solid;
-        background-color: #24AAE2;
+        border: rgba(0, 0, 0, 0.1) 4px solid;
+        background-color: rgba(36, 170, 226, 0.1);
         height: 92%;
         grid-column-start: 1;
         grid-column-end: 3;
@@ -127,13 +130,13 @@
         grid-row-end: 2;
     }
     .aside{
-        border: black 4px solid;
-        background-color: rgb(34, 154, 206);
+        border: rgba(0, 0, 0, 0.1) 4px solid;
+        background-color: rgba(34, 154, 206, .1);
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 1;
         grid-row-end: 4;
-        opacity: .1;
+        
     }
     
     .aside h1{
@@ -153,8 +156,8 @@
         margin-right: auto;
     }
     .item-1{
-        border: black 4px solid;
-        background-color: #1399C6;
+        border: rgba(0, 0, 0, 0.1) 4px solid;
+        background-color: rgba(19, 153, 198, 0.1);
         grid-column-start: 1;
         grid-column-end: 2;
         grid-row-start: 2;
@@ -165,8 +168,8 @@
         text-align: center;
     }
     .item-2{
-        border: black 4px solid;
-        background-color: #1399C6;
+        border: rgba(0, 0, 0, 0.1) 4px solid;
+        background-color: rgba(19, 153, 198, 0.1);
         grid-column: 2 / 3;
         grid-row-start: 2;
         grid-row-end: 4;
