--- a/css/layout.css
+++ b/css/layout.css
@@ -27,7 +27,6 @@
     }
     .combine{
         display: flex;
-        position: fixed;
         width: 100%;
         margin-top: 20px;
     }
@@ -64,6 +63,7 @@
         grid-template-rows: 50%, 50%;
         grid-gap: 12px;
         font-family: 'Light';
+        margin-top: 10px;
     }
     h1{
         text-align: center;
@@ -108,6 +108,7 @@
         width: 200px;
         height: 200px;
     }
+    
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
