--- a/css/layout.css
+++ b/css/layout.css
@@ -23,7 +23,7 @@
     .logo{
         opacity: 0;
         width: 1px;
-        height: 1px;
+        height: auto;
     }
     .combine{
         display: flex;
